# animal_keypoint_detection

./: .gitignore  README.md  correct_mapping.csv  dataset.yaml  diagnostics_visualize.py  mmpose.ipynb  run_simulation.sh  train.py  train_subset.py  train_yolov8s_pose.py  val_summary.csv  val_summary_recovered.csv  visualizations.cache  visualize_dataset.py  yolo_benchmark.py  yolo_coco_test.py  yolo_grid_viz.py  yolo_pr_comparison.py  yolo_recovery.py  yolo_train.py  yolo_val.py  yolov26-pose-model.ipynb
ros2_ws/: README_ros2_horse_pose.md  capture_display_frame.sh  check_topics.sh  clean.sh  fixed_world.sdf  horse_model_map.csv  horse_model_map.json  inspect_horses.py  install_python_deps.sh  record_demo_video.sh  run_full_demo.sh  run_terminal_1_sim.sh  run_terminal_2_perception.sh  run_terminal_3_rviz.sh  run_terminal_4_pose_debug.sh
ros2_ws/src/horse_pose_sim/: CMakeLists.txt  package.xml
ros2_ws/src/horse_pose_sim/launch/: full_stack.launch.py  perception.launch.py  sim_world.launch.py
ros2_ws/src/horse_pose_sim/models/horse_basic/: model.config  model.sdf
ros2_ws/src/horse_pose_sim/models/horse_esperanza/: model.config  model.sdf
ros2_ws/src/horse_pose_sim/models/horse_scaled_large/: model.config  model.sdf
ros2_ws/src/horse_pose_sim/msg/: HorseDetection.msg  HorseDetections.msg
ros2_ws/src/horse_pose_sim/rviz/: horse_pose.rviz
ros2_ws/src/horse_pose_sim/scripts/: horse_pose_node.py  keypoint_overlay_node.py
ros2_ws/src/horse_pose_sim/worlds/: horse_arena.world
